Input forms text added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <form action="#">
+            <h3>Registeration Form</h3>
+                <div class="input-container">
+                    <!-- Full name -->
+                    <label for="name">Full Name</label>
+                    <input type="text" placeholder="Enter your full name" name="name" id="name">
+                    <!-- Email -->
+                    <label for="email">Email</label>
+                    <input type="email" placeholder="Enter your email address" name="email" id="email">
+                    <!-- Username -->
+                    <label for="user-name">Username</label>
+                    <input type="text" placeholder="Enter your username" name="user-name" id="user-name">
+                    <!-- Phone number -->
+                    <label for="tele">Phone Number</label>
+                    <input type="text" placeholder="Enter your phone number" name="tele" id="tele">
+                    <!-- Password -->
+                    <label for="pwd">Password</label>
+                    <input type="password" placeholder="Enter your password" name="pwd" id="pwd">
+                    <!-- Password Confirm -->
+                    <label for="pwd">Confirm Password</label>
+                    <input type="password" placeholder="Confirm your password" name="pwd" id="pwd">
+                </div>
+        </form>
+    </div>
 </body>
 </html>
