margin, styling added

--- a/index.html
+++ b/index.html
@@ -10,37 +10,37 @@
 <body>
     <div class="container">
         <div>
-            <h3>Registeration Form</h3>
+            <h3 class="title-form">Registeration Form</h3>
         </div>
         <form action="GET">
                 <div class="input-container">
                     <!-- Full name -->
-                    <div>
+                    <div class="input-box">
                         <label for="name">Full Name</label>
                         <input type="text" placeholder="Enter your full name" name="name" id="name" required>
                     </div>
                     <!-- Email -->
-                    <div>
+                    <div class="input-box">
                         <label for="email">Email</label>
                     <input type="email" placeholder="Enter your email address" name="email" id="email" required>
                     </div>
                     <!-- Username -->
-                    <div>
+                    <div class="input-box">
                         <label for="user-name">Username</label>
                         <input type="text" placeholder="Enter your username" name="user-name" id="user-name" required>
                     </div>
                     <!-- Phone number -->
-                    <div>
+                    <div class="input-box">
                         <label for="tele">Phone Number</label>
                         <input type="text" placeholder="Enter your phone number" name="tele" id="tele" required>
                     </div>
                     <!-- Password -->
-                    <div>
+                    <div class="input-box">
                         <label for="pwd">Password</label>
                         <input type="password" placeholder="Enter your password" name="pwd" id="pwd" required>
                     </div>
                     <!-- Password Confirm -->
-                    <div>
+                    <div class="input-box">
                         <label for="pwd">Confirm Password</label>
                         <input type="password" placeholder="Confirm your password" name="pwd" id="pwd" required>
                     </div>
