--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
                     <div class="radio-buttons">
                         <div>
                             <label for="yes">Yes</label>
-                            <input type="radio">
+                            <input type="radio" name="options">
                         </div>
                         <div>
                             <label for="no">No</label>
-                            <input type="radio">
+                            <input type="radio" name="options">
                         </div>
                         <div>
                             <label for="yes">My name's Jeff</label>
-                            <input type="radio">
+                            <input type="radio" name="options">
                         </div>
                     </div>
                 </div>
